--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
  </head>
  <body>
         <script src='./scripts/script.js' type='text/javascript'></script>
+        <div class="backdrop">
+          <div class="loader">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
  </body>
 </html>
