--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
  <body>
         <script src='./scripts/script.js' type='text/javascript'></script>
-        <div id="load" class="loader">
+        <div id="loader" class="loader">
           <div>G</div>
           <div>N</div>
           <div>I</div>
@@ -15,6 +15,6 @@
           <div>A</div>
           <div>O</div>
           <div>L</div>
-        </div> 
+        </div>
  </body>
 </html>
