--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
  <body>
         <script src='./scripts/script.js' type='text/javascript'></script>
-        <div id="loader" class="loader">
+        <div id="load" class="loader">
           <div>G</div>
           <div>N</div>
           <div>I</div>
