--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
  </head>
  <body>
         <script src='./scripts/script.js' type='text/javascript'></script>
-        <div id="load" class="loader">
-          <div>G</div>
-          <div>N</div>
-          <div>I</div>
-          <div>D</div>
-          <div>A</div>
-          <div>O</div>
-          <div>L</div>
-        </div>
+        <div id="loader" class="load">
+  <div>G</div>
+  <div>N</div>
+  <div>I</div>
+  <div>D</div>
+  <div>A</div>
+  <div>O</div>
+  <div>L</div>
+</div>
  </body>
 </html>
